<resources>
    <string name="app_name">RAPID Weather</string>
    <string name="consultar">Consultar</string>
    <string name="municipio">Municipio</string>
    <string name="match_correo">^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="registrar">Registrate</string>
    <string name="volver">volver</string>
    <string name="introduzaca_su_email">Introduzca su Email</string>
    <string name="introduzca_una_contrase_a">Introduzca una contraseña</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
    <string name="introduzca_su_contrase_a">Introduzca su contraseña</string>
    <string name="introduzca_su_email">Introduzca su email</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="formulario_de_acceso">INICIA SESIÓN</string>
    <string name="acceder">Acceder</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="formulario_de_registro">REGÍSTRATE</string>
    <string name="introduzca_su_nombre">Introduzca su nombre</string>
    <string name="nombre">Nombre</string>
    <string name="he_olvidado_la_contrase_a">He olvidado la contraseña</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="app_icon">App Icon</string>
    <string name="icono_del_estado_del_cielo">Icono del estado del cielo</string>
    <string name="recuperar">Recuperar</string>
    <string name="texto_recuperacion">Por favor, escriba su correo electrónico para que le podamos enviar el enlace de recuperación de la contraseña.</string>
    <string name="txt_volver_al_inicio">Volver al inicio de sesión</string>
    <string name="tiempo_diario">Tiempo diario</string>
    <string name="tiempo_horario">Tiempo horario</string>
    <string name="introduzca_su_contrase_a_actual">Introduzca su contraseña actual</string>
    <string name="introduzca_su_nueva_contrase_a">Introduzca su nueva contraseña</string>
    <string name="title_activity_borrar_cuenta">BorrarCuenta</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="elegir_idioma">Elegir idioma</string>
    <string name="consultar_tiempo">Consultar Tiempo</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="bienvenido_a_tu_sesi_n_qu_desea_realizar">Bienvenido a tu sesión ¿Qué desea realizar?</string>
    <string name="soporte" />
    <string name="soport">Soporte</string>

    <string-array name="language_option">
        <item>Idioma del sistema</item>
        <item>Español</item>
        <item>English</item>
    </string-array>
</resources>