<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#07BEF6"
    tools:context=".HelpPassword">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#07BEF6"
        android:minWidth="350dp"
        app:layout_constraintBottom_toTopOf="@+id/button_recuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_info"
        app:layout_constraintVertical_bias="0.639">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_gmail_recuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:autofillHints="emailAddress"
            android:hint="@string/introduzca_su_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="143dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_recuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#072FF6"
        android:onClick="recuperarPassword"
        android:text="@string/recuperar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <TextView
        android:id="@+id/textView_info"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_recuperacion"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:onClick="volverLogin"
        android:text="@string/txt_volver_al_inicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_recuperar"
        app:layout_constraintVertical_bias="0.556" />
</androidx.constraintlayout.widget.ConstraintLayout>